Fixed Fabric config not checking if values are in valid range
Allow long currency values for Fabric config
Change maxIncomeDays to a byte in Fabric config