@@ -55,7 +55,7 @@ public class GrandEconomyApiFabric implements IGrandEconomyApi {
 
     @Override
     public String formatCurrency(long amount) {
-        return GrandEconomy.getEconomy().toString(amount);
+        return GrandEconomy.getEconomy().getFormattedCurrency(amount);
     }
 
     @Override
