@@ -1,0 +1,5 @@
+package the_fireplace.grandeconomy.forge.compat;
+
+public interface IRegisterable {
+    void register();
+}
