@@ -1,5 +1,0 @@
-package the_fireplace.grandeconomy.forge.compat.sponge;
-
-public interface ISpongeCompat {
-    void register();
-}
